--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Daemon Engineering</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     /* Ensure the body takes full height and hides overflow if we want a pure splash */
     body,
     html {
       margin: 0;
       padding: 0;
-      height: 100%;
+      height: 100vh;
+      width: 100vw;
       overflow: hidden;
       background-color: #000;
-      /* Fallback to black for clinical look */
     }
 
     .splash-container {
@@ -26,7 +29,10 @@
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
-      /* This will crop to fill while keeping center visible */
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      align-items: center;
     }
   </style>
 </head>
