--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="data:image/png;base64,iVBORw0KGgo=">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Daemon Engineering</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,13 +19,14 @@
       width: 100vw;
       overflow: hidden;
       background-color: #000;
+      font-family: 'Inter', sans-serif;
     }
 
     .splash-container {
       position: relative;
       width: 100%;
       height: 100%;
-      background-image: url('/logo -background.png');
+      background-image: url('logo-background.png');
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
@@ -33,15 +34,25 @@
       flex-direction: column;
       justify-content: flex-end;
       align-items: center;
+      padding-bottom: 2rem; /* Add some space for the footer */
+      box-sizing: border-box;
+    }
+
+    .footer {
+      color: #d1d5db; /* Light grey (Tailwind coolGray-300 equivalent) */
+      font-size: 0.875rem; /* Small */
+      font-weight: 600; /* Semi-bold */
+      text-align: center;
     }
   </style>
 </head>
 
 <body>
   <div class="splash-container">
-    {{> footer }}
+    <div class="footer">
+      (c) 2026 Livingston Larus, dba Daemon Engineering
+    </div>
   </div>
-  <script type="module" src="/src/main.ts"></script>
 </body>
 
 </html>
