chore: update copyright symbol to ©

--- a/index.html
+++ b/index.html
@@ -34,14 +34,18 @@
       flex-direction: column;
       justify-content: flex-end;
       align-items: center;
-      padding-bottom: 2rem; /* Add some space for the footer */
+      padding-bottom: 2rem;
+      /* Add some space for the footer */
       box-sizing: border-box;
     }
 
     .footer {
-      color: #d1d5db; /* Light grey (Tailwind coolGray-300 equivalent) */
-      font-size: 0.875rem; /* Small */
-      font-weight: 600; /* Semi-bold */
+      color: #d1d5db;
+      /* Light grey (Tailwind coolGray-300 equivalent) */
+      font-size: 0.875rem;
+      /* Small */
+      font-weight: 600;
+      /* Semi-bold */
       text-align: center;
     }
   </style>
@@ -50,7 +54,7 @@
 <body>
   <div class="splash-container">
     <div class="footer">
-      (c) 2026 Livingston Larus, dba Daemon Engineering
+      © 2026 Livingston Larus, dba Daemon Engineering
     </div>
   </div>
 </body>
